Blueprints/NetworkPolicies/PodBusyBox.yml
apiVersion: v1
kind: Pod
metadata:
  name: np-busybox
  namespace: np-test
  labels:
    app: client
spec:
  containers:
  - image: radial/busyboxplus:curl
    name: busybox
    command:
    - "sh"
    - "-c"
    - "while true; do sleep 5; done"
