Blueprints/NetworkPolicies/PodNGINX.yml
apiVersion: v1
kind: Pod
metadata:
  name: np-nginx
  namespace: np-test
  labels:
    app: nginx
spec:
  containers:
  - image: nginx
    name: nginx
