Blueprints/NetworkPolicies/DenyAllNetworkPolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: np-test
spec:
  podSelector: 
    matchLabels:
      app: nginx
  policyTypes:
  - Ingress
  - Egress
