Blueprints/NetworkPolicies/DenyByIPNetworkPolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
spec:
  podSelector:
    matchLabels:
      app: testapp
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
       cidr: 10.0.0.0/8
       except:
       - 10.4.2.3/32
    - podSelector:
       matchLabels:
         app: testdb
    ports:
    - protocol: TCP
      port: 80
